syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service ServerInfoService {
    // get version
    rpc GetVersion(google.protobuf.Empty) returns (GetVersionResponse) {
        option(google.api.http) = {
            get: "/api/server-info/version"
        };
    };
}

message GetVersionResponse {
    string version = 1;
}